--- a/dotfiles/youtube-dl.conf
+++ b/dotfiles/youtube-dl.conf
@@ -1,1 +1,1 @@
---extract-audio --audio-quality 320k --audio-format mp3 --embed-thumbnail
+--extract-audio --audio-quality 320k --audio-format mp3 --embed-thumbnail --output "/home/tseitz/Dropbox/DJ/SlimChance DJ Music/Go Through/%(uploader)s - %(title)s.%(ext)s"
